fixed form on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -105,19 +105,21 @@
       text-align: center;
     }
 
-    footer {
+    /* footer {
         position: absolute;
         bottom: 1px;
-    }
+    } */
   }
   
   @media (max-width: 576px) {
     body, html {
         overflow: auto;
     }
+
     header {
         padding: 2.4rem 0 0 0;
     }
+
     .logo {
         height: 60px;
         object-fit: contain;
@@ -148,8 +150,44 @@
       font-size: 1.2rem;
     }
 
-    footer {
+    /* footer {
         position: absolute;
         bottom: -375px;
-    }
+    } */
   }
+
+  #typeform-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+    opacity: 0;
+    transition: opacity 0.5s;
+  }
+  
+  #typeform-modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 11;
+    background: #e0ded9;
+    padding: 8px;
+    border-radius: 10px;
+    width: 80vw;
+    height: 80vh; 
+    overflow: auto; 
+    transition: opacity 0.5s, transform 0.5s;
+  }
+
+  
+  
+  
+  
+
+  
