--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ button:focus {
   outline: none;
 }
 
-footer {
+/* footer {
   position: absolute;
   bottom: 1px;
   width: 100%;
@@ -182,4 +182,4 @@ footer {
 .copyright {
   font-size: 1.2rem;
   color: #4a4a49;
-}
+} */
